--- a/Spaces.SPA/src/app/navbar/navbar.component.scss
+++ b/Spaces.SPA/src/app/navbar/navbar.component.scss
@@ -1,6 +1,8 @@
 .navbar {
 	display: flex;
 	align-items: center;
+	background-color: var(--toolbar-background-color);
+	color: var(--text-color);
 }
 .app-title {
 	font-weight: bold;
